[package]
name = "target-csv"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Singer target that writes to CSV files"

[dependencies]
chrono = "0.4"
clap = "3.2"
csv = "1.1"
env_logger = "0.11.7"
jsonschema = "0.16"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
